# atparty2021

./: .clang-format  .gitignore  CMakeLists.txt  README.md  format.bat
audio/include/: AudioManager.h  BackgroundTheme.h
audio/src/: AudioManager.cpp  BackgroundTheme.cpp
compaction-lib/include/: BufferSuballocator.h  RTCompaction.h
compaction-lib/src/: BufferSuballocator.cpp  RTCompaction.cpp
config/: WORKING_scene.json  light_test_scene.json  scene.json  soundconfig.txt
config/paths/: atparty_vp.txt  boatLinear.txt  boatWobbling.txt  boat_vp.txt  boatwp.txt  camera_vp.txt  camera_wp.txt  cometrollercoaster_vp.txt  cometrollercoaster_wp.txt  ghost_suzanne_color.txt  ghost_suzanne_wp.txt  manawar_light_vp.txt  manawar_text_color.txt  manawar_text_vp.txt  monkey_bobble_vp.txt  path.txt  skull_disappear.txt  teapot_wp.txt
drawbuffers/include/: MRTFrameBuffer.h  RenderBuffers.h  VAO.h
drawbuffers/src/: MRTFrameBuffer.cpp  RenderBuffers.cpp  VAO.cpp
dxLayer/include/: ConstantBuffer.h  DXDefines.h  DXLayer.h  DXRStateObject.h  PipelineShader.h  PresentTarget.h  RayTracingPipelineShader.h  ResourceBuffer.h  Sampler.h  ShaderTable.h
dxLayer/src/: BufferSuballocator.cpp  ConstantBuffer.cpp  DXLayer.cpp  DXRStateObject.cpp  PipelineShader.cpp  PresentTarget.cpp  RTCompaction.cpp  RayTracingPipelineShader.cpp  ResourceBuffer.cpp  Sampler.cpp
effects/include/: Bloom.h  Effect.h  SSAO.h  SSCompute.h  SVGFDenoiser.h  TAA.h
effects/src/: Bloom.cpp  Effect.cpp  SSAO.cpp  SSCompute.cpp  SVGFDenoiser.cpp  TAA.cpp
engine/include/: EngineManager.h  EngineScene.h  EngineState.h  MasterClock.h  ResourceManager.h  SceneBuilder.h
engine/src/: EngineManager.cpp  EngineScene.cpp  EngineState.cpp  MasterClock.cpp  ResourceManager.cpp  SceneBuilder.cpp
imgui/: imgui_impl_dx12.cpp  imgui_impl_dx12.h
io/include/: Dirent.h  EventSubscriber.h  IOConstants.h  IOEventDistributor.h  IOEvents.h  Logger.h
io/src/: Dirent.cpp  EventSubscriber.cpp  IOEventDistributor.cpp  IOEvents.cpp  Logger.cpp  main.cpp
lights/include/: ColorPath.h  Light.h
lights/src/: ColorPath.cpp  Light.cpp
math/include/: FloatConverter.h  FunctionState.h  MVP.h  Matrix.h  Randomization.h  StateVector.h  Tex2.h  Vector4.h  VectorPath.h  VectorUtil.h  WaypointPath.h
math/src/: MVP.cpp  Matrix.cpp  Randomization.cpp  StateVector.cpp  Tex2.cpp  Vector4.cpp  VectorPath.cpp  WaypointPath.cpp
model/include/: AnimatedModel.h  Animation.h  AnimationBuilder.h  Entity.h  GltfLoader.h  Model.h  ModelBroker.h  SkinningData.h
model/src/: AnimatedModel.cpp  Animation.cpp  AnimationBuilder.cpp  Entity.cpp  GltfLoader.cpp  Model.cpp  ModelBroker.cpp  SkinningData.cpp
shading/include/: ComputeShader.h  DeferredShader.h  EffectShader.h  HLSLShader.h  MergeShader.h  PathTracerShader.h  SSAOShader.h  Shader.h  ShaderBase.h  ShaderBroker.h  StaticShader.h
shading/shaders/hlsl/cs/: addCS.hlsl  blurHorizontalShaderRGBCS.hlsl  blurShaderCS.hlsl  blurVerticalShaderRGBCS.hlsl  calculateMeanVarianceCS.hlsl  compositorShaderCS.hlsl  downsampleCS.hlsl  downsampleRGBCS.hlsl  highLuminanceFilterCS.hlsl  mipGenCS.hlsl  motionVectorsCS.hlsl  primaryRaysShaderCS.hlsl  reflectionRaysShaderCS.hlsl  sunLightRaysShaderCS.hlsl  transformVerticesCS.hlsl  upsampleCS.hlsl  upsampleRGBCS.hlsl
shading/shaders/hlsl/cs/denoising/: atrousWaveletTransformCrossBilateralFilterShaderCS.hlsl  temporalAccumulationSuperSamplingCS.hlsl  transformVerticesCS.hlsl
shading/shaders/hlsl/cs/dxr1_1/: primaryRaysShaderCS.hlsl  reflectionRaysShaderCS.hlsl  sunLightRaysShaderCS.hlsl
shading/shaders/hlsl/dxr/: dxrprimaryraysshaders.hlsl  dxrreflectionraysshaders.hlsl  dxrshaders.hlsl
shading/shaders/hlsl/include/: NRD.hlsl  NRD.hlsli  dxr1_0_defines.hlsl  dxr1_1_defines.hlsl  math.hlsl  pointLightCommon.hlsl  randomRays.hlsl  rayTracingUberShader.hlsl  structs.hlsl  sunLightCommon.hlsl  utils.hlsl
shading/shaders/hlsl/ps/: blitColorShaderPS.hlsl  blitDepthShaderPS.hlsl  deferredShaderPS.hlsl  fireShaderPS.hlsl  fluidShaderPS.hlsl  forwardShaderPS.hlsl  mergeShaderPS.hlsl  ssaoShaderPS.hlsl  staticShaderPS.hlsl
shading/shaders/hlsl/vs/: animatedShadowShaderVS.hlsl  blitColorShaderVS.hlsl  blitDepthShaderVS.hlsl  deferredShaderVS.hlsl  fireShaderVS.hlsl  fluidShaderVS.hlsl  forwardShaderVS.hlsl  mergeShaderVS.hlsl  ssaoShaderVS.hlsl  staticShaderVS.hlsl  staticShadowShaderVS.hlsl
shading/src/: ComputeShader.cpp  DeferredShader.cpp  EffectShader.cpp  HLSLShader.cpp  MergeShader.cpp  PathTracerShader.cpp  SSAOShader.cpp  Shader.cpp  ShaderBase.cpp  ShaderBroker.cpp  StaticShader.cpp
texture/include/: AssetTexture.h  LayeredTexture.h  RenderTexture.h  Texture.h  TextureBroker.h
texture/src/: AssetTexture.cpp  LayeredTexture.cpp  RenderTexture.cpp  Texture.cpp  TextureBroker.cpp
view/include/: Camera.h  VectorCamera.h  ViewEventDistributor.h  ViewEvents.h  WaypointCamera.h
view/src/: Camera.cpp  VectorCamera.cpp  ViewEventDistributor.cpp  ViewEvents.cpp  WaypointCamera.cpp
